--- a/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_KFAC.tex
+++ b/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_KFAC.tex
@@ -1,1 +1,1 @@
-damping: $\num[scientific-notation=true]{4.199625e-12}$, momentum: $\num[scientific-notation=true]{8.592701e-01}$, exponential moving average: $\num[scientific-notation=true]{8.566160e-01}$, initialize Kronecker factors to identity: $\text{yes}$, $N_{\Omega}$: $\num[scientific-notation=false]{128}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{2292}$, batch sampling frequency: $\num[scientific-notation=false]{451}$
+damping: $\num[scientific-notation=true]{2.555064e-03}$, momentum: $\num[scientific-notation=true]{6.158209e-01}$, exponential moving average: $\num[scientific-notation=true]{9.824854e-01}$, initialize Kronecker factors to identity: $\text{no}$, $N_{\Omega}$: $\num[scientific-notation=false]{156}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{2296}$, batch sampling frequency: $\num[scientific-notation=false]{542}$
